--- a/Sign_up.html
+++ b/Sign_up.html
@@ -197,7 +197,7 @@
         <img src="log.svg" class="image" alt=" ">
     </div>
     </div>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="./Question/main.js" type="text/javascript"></script>
 
 
 </body>
