--- a/sign_in.html
+++ b/sign_in.html
@@ -78,7 +78,7 @@
         
         .content {
             position: absolute;
-            top: 10%;
+            top: 13%;
             left: 70%;
             color: whitesmoke;
             padding: 10px;
@@ -121,6 +121,8 @@
             left: 35%;
             width: 30%;
             height: 33%;
+            justify-content: center;
+            text-align: center;
         }
         /*  chèn icon vào trong input */
         
@@ -164,17 +166,13 @@
                     <div class="input-field">
                         <i class="fas fa-user"></i>
                         <!-- Sử dụng trường dữ liệu tạo ra icon hình người -->
-                        <input type="text" placeholder="Username" />
+                        <input type="text" placeholder="Username" id="username" />
                     </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" class="fas fa-lock" />
+                    <div class=" input-field ">
+                        <i class="fas fa-lock "></i>
+                        <input type="password " placeholder="Password " class="fas fa-lock " id="password" />
                     </div>
-                    <!-- <div class="input-field">
-                        <i class="fas fa-envelope"></i>
-                        <input type="email" placeholder="Email" />
-                    </div> -->
-                    <button type="submit" value="Đăng kí" class="Login">Đăng kí</button>
+                    <button type="submit " value="Đăng kí " class="Login ">Đăng nhập</button>
 
                 </form>
             </div>
@@ -188,16 +186,16 @@
                 Chào mừng bạn đến với khóa học đăng kí ngay nào!
             </p>
             <br>
-            <a href="Sign_up.html"><button action="#" class="btn transparent" id="sign-in-btn">
+            <a href="Sign_up.html "><button action="# " class="btn transparent " id="sign-in-btn">
                 Đăng kí
             </button></a>
         </div>
 
         <div>
-            <img src="register.svg" class="image" alt=" ">
+            <img src="register.svg " class="image" alt=" ">
         </div>
     </div>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="./Question/main.js " type="text/javascript "></script>
 
 </body>
 
